--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -6,8 +6,8 @@
 body {
   display: flex;
   flex-direction: column;
-  font-family: 'Gilroy';
   height: 100vh;
+  font-family: 'Gilroy', sans-serif;
 }
 
 button:focus-visible,
@@ -22,12 +22,13 @@ iframe:focus-visible,
 }
 
 .button {
+  @include maxWidth(220px);
+
   display: flex;
   justify-content: center;
-  letter-spacing: 0.04em;
   border-radius: $radius;
-  @include maxWidth(220px);
   height: fit-content;
+  letter-spacing: 0.04em;
   padding-block: 15px;
 }
 
@@ -44,27 +45,27 @@ iframe:focus-visible,
 }
 
 .delimetr {
+  margin: 0;
   height: 1px;
   background-color: $white;
   opacity: 0.4;
-  margin: 0;
 }
 
 @include laptop {
   .button {
     @include maxWidth(200px);
+
     padding-block: 11px;
   }
 }
 
 .disable-scroll {
-  position: relative;
-  overflow: hidden;
-  height: 100vh;
   position: fixed;
   left: 0;
   top: 0;
+  overflow: hidden;
   width: 100%;
+  height: 100vh;
 }
 
 .fadeInUp {
