--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -1,18 +1,19 @@
 @mixin font-face($font-family, $url, $weight) {
   @font-face {
-    font-family: '#{$font-family}';
-    src: url('../fonts/#{$url}.woff2') format('woff2'),
+    src:
+      url('../fonts/#{$url}.woff2') format('woff2'),
       url('../#{$url}.woff') format('woff');
+    font-family: '#{$font-family}';
     font-weight: #{$weight};
-    font-display: swap;
     font-style: normal;
+    font-display: swap;
   }
 }
 
 @mixin font($fz, $lh, $fw) {
+  font-weight: $fw;
   font-size: $fz;
   line-height: $lh;
-  font-weight: $fw;
 }
 
 @mixin size($width, $height) {
@@ -21,6 +22,6 @@
 }
 
 @mixin maxWidth($mw) {
-  max-width: $mw;
   width: 100%;
+  max-width: $mw;
 }
