--- a/src/scss/components/companyActivitiesSection/_companyActivitiesSection.scss
+++ b/src/scss/components/companyActivitiesSection/_companyActivitiesSection.scss
@@ -7,9 +7,10 @@
 }
 
 .container {
-  @extend %container_940;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+
+  @extend %container_940;
 }
 
 .companyActivities__column_left {
@@ -20,66 +21,69 @@
 
 .companyActivities__column_right {
   display: grid;
-  row-gap: 100px;
   justify-self: end;
+  row-gap: 100px;
 }
 
 .companyActivities__title {
   @include maxWidth(358px);
-  color: $blue_02;
+
   letter-spacing: 0.04em;
+  color: $blue_02;
 }
 
 .infoCard {
-  @extend %flexColumn;
   @include maxWidth(380px);
+
   align-items: center;
   justify-content: space-between;
-  gap: 56px;
   justify-self: end;
-  height: 525px;
-  padding: 48px;
-  box-shadow: $shadow_1;
   border-radius: $radius;
+  padding: 48px;
+  height: 525px;
+  box-shadow: $shadow_1;
+  gap: 56px;
+
+  @extend %flexColumn;
 }
 
 .pictureContainer {
   padding-right: 38px;
+
   .infoCard__picture {
     @include maxWidth(182px);
   }
 }
 
 .pictureContainer_right {
-  padding-right: 75px;
   padding-top: 14px;
+  padding-right: 75px;
 }
 
 .infoCard__info {
-  @extend %flexColumn;
   gap: 32px;
+
+  @extend %flexColumn;
 }
 
 .infoCard__textInfo {
-  @extend %flexColumn;
-  gap: 16px;
-  color: $blue_01;
   letter-spacing: 0.05em;
+  color: $blue_01;
+  gap: 16px;
+
+  @extend %flexColumn;
 }
 
+/* stylelint-disable property-no-unknown */
 .infoCard__text {
-  -ms-text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  -ms-line-clamp: 4;
-  -webkit-line-clamp: 4;
-  line-clamp: 4;
-  display: -webkit-box;
   display: box;
+  overflow: hidden;
   word-wrap: break-word;
+  text-overflow: ellipsis;
   -webkit-box-orient: vertical;
   box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
 
 .infoCard__link {
@@ -89,6 +93,7 @@
 
   span {
     @include font(14px, 30px, 500);
+
     color: $blue_04;
   }
 }
