--- a/src/scss/components/footer/_footer.scss
+++ b/src/scss/components/footer/_footer.scss
@@ -1,29 +1,33 @@
 .footer {
-  background-color: $blue_04;
-  color: $white;
+  margin-top: -1px;
   padding-right: 96px;
+  color: $white;
+  background-color: $blue_04;
 }
 
 .footer__wrapper {
-  @extend %flexColumn;
   align-items: center;
-  gap: 96px;
-  padding: 91px 0px 64px;
-  background-color: $blue_02;
   border-radius: $radiusRightTop;
+  padding: 91px 0 64px;
+  background-color: $blue_02;
+  gap: 96px;
+
+  @extend %flexColumn;
 }
 
 .footerUpper {
   @include maxWidth(860px);
+
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   gap: 60px;
 }
 
 .textInfo {
-  @extend %flexColumn;
   gap: 32px;
+
+  @extend %flexColumn;
 }
 
 .textInfo__title {
@@ -32,24 +36,28 @@
 
 .textInfo__text {
   @include maxWidth(460px);
+
   opacity: 0.6;
 }
 
 .footer__delimetr {
   @include maxWidth(1073px);
+
   margin-right: auto;
 }
 
 .footerLower {
   @include maxWidth(860px);
-  @extend %flexColumn;
+
   gap: 64px;
+
+  @extend %flexColumn;
 }
 
 .footerLower__inner {
   display: flex;
-  gap: 97px;
   width: 100%;
+  gap: 97px;
 }
 
 .sectionContainer {
@@ -58,16 +66,18 @@
 }
 
 .footerLower__section {
-  @extend %flexColumn;
   color: $white;
   gap: 32px;
+
+  @extend %flexColumn;
 }
 
 .sectionTitleLink {
+  @include font(20px, 30px, 500);
+
   display: flex;
   align-items: center;
   gap: 15px;
-  @include font(20px, 30px, 500);
 }
 
 .footerLogo {
@@ -79,9 +89,10 @@
 }
 
 .sectionList {
-  @extend %flexColumn;
-  gap: 24px;
   letter-spacing: 0.05em;
+  gap: 24px;
+
+  @extend %flexColumn;
 }
 
 .sectionList__item {
@@ -102,6 +113,6 @@
 }
 
 .footerLower__copyright {
-  opacity: 0.4;
   letter-spacing: 0.05em;
+  opacity: 0.4;
 }
