--- a/src/scss/components/modal/_modal.scss
+++ b/src/scss/components/modal/_modal.scss
@@ -1,15 +1,16 @@
 .modal {
   position: fixed;
-  inset: 0;
+  z-index: 1000;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  padding:
+    env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+    env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
   opacity: 0;
   visibility: hidden;
   transition: opacity $transition-time, visibility $transition-time;
-  padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
-    env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
-  z-index: 1000;
+  inset: 0;
 
   &.is-open {
     opacity: 1;
@@ -19,25 +20,26 @@
 
 .backdrop {
   position: absolute;
-  inset: 0;
-  background-color: $gray-shadow;
   overflow-y: auto;
+  background-color: $gray-shadow;
+  inset: 0;
   -webkit-overflow-scrolling: touch;
 }
 
 .modal__close {
   position: absolute;
-  top: 30px;
   right: 38px;
-  color: $white;
-  font-size: 54px;
+  top: 30px;
   z-index: 3;
+  font-size: 54px;
+  color: $white;
 }
 
 .modal__container {
   @include maxWidth(540px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
