--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -35,7 +35,7 @@ ul {
 
 button {
   border: none;
-  background-color: transparent;
+  background-color: var(--transparent);
   cursor: pointer;
 }
 
