--- a/src/scss/components/footer/_footer.scss
+++ b/src/scss/components/footer/_footer.scss
@@ -1,15 +1,15 @@
 .footer {
   margin-top: -1px;
   padding-right: 96px;
-  color: $white;
-  background-color: $blue_04;
+  color: var(--white);
+  background-color: var(--blue_04);
 }
 
 .footer__wrapper {
   align-items: center;
-  border-radius: $radiusRightTop;
+  border-radius: var(--radiusRightTop);
   padding: 91px 0 64px;
-  background-color: $blue_02;
+  background-color: var(--blue_02);
   gap: 96px;
 
   @extend %flexColumn;
@@ -66,7 +66,7 @@
 }
 
 .footerLower__section {
-  color: $white;
+  color: var(--white);
   gap: 32px;
 
   @extend %flexColumn;
